# asciimeadow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cog.toml
.copr/: Makefile
.github/workflows/: publish.yml
docs/: RELEASING.md
docs/superpowers/plans/: 2026-06-30-asciimeadow.md  2026-07-03-meadow-visual-overhaul.md  2026-07-06-rust-rewrite.md  2026-07-06-weather-daynight.md  2026-07-08-copr-auto-deploy.md  2026-07-08-ground-band-depth.md  2026-07-08-publish-ci.md
docs/superpowers/specs/: 2026-06-30-asciimeadow-design.md  2026-07-03-meadow-visual-overhaul-design.md  2026-07-06-rust-rewrite-design.md  2026-07-06-weather-daynight-design.md  2026-07-08-copr-auto-deploy-design.md  2026-07-08-ground-band-depth-design.md  2026-07-08-publish-ci-design.md
packaging/: asciimeadow.spec  bump-spec.sh
packaging/tests/: bump-spec.test.sh
src/: art.rs  engine.rs  environment.rs  lib.rs  main.rs  scene.rs  spawn.rs
