[package]
name = "asciimeadow"
version = "0.1.0"
edition = "2021"
description = "Terminal ASCII meadow screensaver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/M4THIA5/asciimeadow"
homepage = "https://github.com/M4THIA5/asciimeadow"
authors = ["Mathias Collas <mathias.collas@gmail.com>"]
readme = "README.md"
keywords = ["screensaver", "ascii", "terminal", "tui"]
categories = ["command-line-utilities"]

[lib]
name = "asciimeadow"
path = "src/lib.rs"

[[bin]]
name = "asciimeadow"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
rand = "0.8"
